--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +18,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/homeFragmentSliderRecyclerView"
         android:layout_marginTop="8dp"
+        />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentHomeProgressBar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_marginBottom="32dp"
+        />
+
+    <include layout="@layout/layout_no_internet_retry"
+        android:id="@+id/fragmentHomeNoInternetLayout"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
