--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="colorPrimary">#FF6200EE</color>
-    <color name="colorPrimaryDark">#FF3700B3</color>
+    <color name="colorPrimary">#00D84A</color>
+    <color name="colorPrimaryDark">#1FAA59</color>
     <color name="colorAccent">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
 
+    <color name="colorLight">#FFFFFF</color>
+
+    <color name="colorFirstGreen">#00D84A</color>
 
 
     <color name="colorGrey">#706D6D</color>
+    <color name="colorLightGrey">#BDBDBD</color>
 
 
     <color name="colorRed">#F63325</color>
