--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,102 +11,117 @@
         android:id="@+id/cartFragmentRecyclerView"
         android:clipToPadding="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/fragmentCartGridLayout"
+        android:layout_above="@id/fragmentCartCheckOutDetailsLayout"
         />
 
-    <GridLayout
-        android:id="@+id/fragmentCartGridLayout"
+    <TextView
+        android:id="@+id/fragmentCartEmptyMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/cart_is_empty"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:drawableTopCompat="@drawable/ic_baseline_shopping_basket_24" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:rowCount="3"
-        android:layout_above="@id/buttonCartFragmentCheckOut"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:text="Subtotal"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            />
-        <TextView
-            android:id="@+id/fragmentCartSubTotalTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:text="Subtotal (3 items)"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:text="Shipping Fees"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            />
-        <TextView
-
-            android:id="@+id/fragmentCartDeliveryChargesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:text="100"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            />
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:text="Total"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            />
-        <TextView
-            android:id="@+id/fragmentCartTotalPriceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:text="100"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:textColor="@color/colorRed"
-            />
-        
-    </GridLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonCartFragmentCheckOut"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Check Out"
+        android:orientation="vertical"
+        android:id="@+id/fragmentCartCheckOutDetailsLayout"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"
+        android:visibility="gone"
+        >
+        <GridLayout
+            android:id="@+id/fragmentCartGridLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:rowCount="3"
+            android:layout_above="@id/buttonCartFragmentCheckOut"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:text="Subtotal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                />
+            <TextView
+                android:id="@+id/fragmentCartSubTotalTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:text="Subtotal (3 items)"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:text="Shipping Fees"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                />
+            <TextView
 
-        />
+                android:id="@+id/fragmentCartDeliveryChargesTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:text="100"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:text="Total"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                />
+            <TextView
+                android:id="@+id/fragmentCartTotalPriceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:text="100"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/colorRed"
+                />
+        </GridLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonCartFragmentCheckOut"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Check Out"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary"
+            />
+    </LinearLayout>
+
 </RelativeLayout>
