--- a/app/src/main/res/layout/fragment_order_details_for_buyer.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_buyer.xml
@@ -280,6 +280,7 @@
                 android:layout_marginTop="8dp"
                 android:isIndicator="false"
                 android:numStars="5"
+                android:theme="@style/RatingBar"
                 android:stepSize="0.5"/>
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
