--- a/app/src/main/res/layout/layout_home_slider_item.xml
+++ b/app/src/main/res/layout/layout_home_slider_item.xml
@@ -14,7 +14,7 @@
             android:id="@+id/layoutHomeSliderImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:src="@drawable/vegetable_place_holder"
             android:scaleType="fitXY"
             />
     </RelativeLayout>
