--- a/app/src/main/res/layout/layout_product_store_item.xml
+++ b/app/src/main/res/layout/layout_product_store_item.xml
@@ -1,18 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="300dp">
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="20dp"
+    android:elevation="8dp"
+    android:layout_margin="2dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/layoutProductStoreItemImageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/vegetable_place_holder"
+            android:scaleType="fitXY"
             />
 
+        <TextView
+            android:id="@+id/layoutProductStoreItemProductName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Name"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginStart="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/layoutProductStoreItemImageView"
+            android:layout_toStartOf="@id/layoutProductStoreItemProductPrice"
+            android:layout_marginTop="16dp"
+            />
+
+
+        <TextView
+            android:id="@+id/layoutProductStoreItemProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/price"
+            android:textColor="@color/colorRed"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/layoutProductStoreItemImageView"
+            android:layout_marginTop="16dp"
+
+            />
 
     </RelativeLayout>
 
