--- a/app/src/main/res/layout/fragment_store_setting.xml
+++ b/app/src/main/res/layout/fragment_store_setting.xml
@@ -25,8 +25,8 @@
                 android:id="@+id/fragmentStoreSettingStoreImageImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDark"
-                android:scaleType="centerCrop" />
+                android:src="@drawable/ic_baseline_store_24"
+               android:scaleType="centerCrop" />
         </com.google.android.material.card.MaterialCardView>
 
         <Button
